Fix multiple code issues (#106)
* Fix multiple code issues

Fix unnecessary or redundant casts
Fix unparameterized list types
Fix dereferenced null pointers causing crashes
Fix non-private / non final variables
and many others...

* Make various null check improvements and misc fixes

* Change string and integer issues

* Remove unused variable