@@ -25,9 +25,9 @@ import nu.xom.Elements;
 /*$Id: NoteListImpl.java,v 1.14 2004/10/28 11:30:15 alexeya Exp $*/
 public class NoteListImpl implements NoteList {
 
-    private Project _project = null;
-    private Document _doc = null;
-    private Element _root = null;
+    private Project _project;
+    private Document _doc;
+    private Element _root;
 
 //    public static final String NS_JNNL = "http://www.openmechanics.org/2003/jnotes-noteslist";
 
@@ -200,7 +200,7 @@ public class NoteListImpl implements NoteList {
 
     private Year getYear(int y) {
         Elements yrs = _root.getChildElements("year");
-        String yy = new Integer(y).toString();
+        String yy = Integer.valueOf(y).toString();
         for (int i = 0; i < yrs.size(); i++) {
             if (yrs.get(i).getAttribute("year").getValue().equals(yy)) {
                 return new Year(yrs.get(i));
@@ -212,7 +212,7 @@ public class NoteListImpl implements NoteList {
 
     private Year createYear(int y) {
         Element el = new Element("year");
-        el.addAttribute(new Attribute("year", new Integer(y).toString()));
+        el.addAttribute(new Attribute("year", Integer.valueOf(y).toString()));
         _root.appendChild(el);
         return new Year(el);
     }
@@ -246,12 +246,12 @@ public class NoteListImpl implements NoteList {
         }
 
         public int getValue() {
-            return new Integer(yearElement.getAttribute("year").getValue()).intValue();
+            return Integer.parseInt(yearElement.getAttribute("year").getValue());
         }
 
         public Month getMonth(int m) {
             Elements ms = yearElement.getChildElements("month");
-            String mm = new Integer(m).toString();
+            String mm = Integer.valueOf(m).toString();
             for (int i = 0; i < ms.size(); i++) {
                 if (ms.get(i).getAttribute("month").getValue().equals(mm)) {
                     return new Month(ms.get(i));
@@ -263,7 +263,7 @@ public class NoteListImpl implements NoteList {
 
         private Month createMonth(int m) {
             Element el = new Element("month");
-            el.addAttribute(new Attribute("month", new Integer(m).toString()));
+            el.addAttribute(new Attribute("month", Integer.valueOf(m).toString()));
             yearElement.appendChild(el);
             return new Month(el);
         }
@@ -291,7 +291,7 @@ public class NoteListImpl implements NoteList {
         }
 
         public int getValue() {
-            return new Integer(mElement.getAttribute("month").getValue()).intValue();
+            return Integer.parseInt(mElement.getAttribute("month").getValue());
         }
 
         public Day getDay(int d) {
@@ -299,7 +299,7 @@ public class NoteListImpl implements NoteList {
                 return null;
             }
             Elements ds = mElement.getChildElements("day");
-            String dd = new Integer(d).toString();
+            String dd = Integer.valueOf(d).toString();
             for (int i = 0; i < ds.size(); i++) {
                 if (ds.get(i).getAttribute("day").getValue().equals(dd)) {
                     return new Day(ds.get(i));
@@ -311,7 +311,7 @@ public class NoteListImpl implements NoteList {
 
         private Day createDay(int d) {
             Element el = new Element("day");
-            el.addAttribute(new Attribute("day", new Integer(d).toString()));
+            el.addAttribute(new Attribute("day", Integer.valueOf(d).toString()));
 /*            el.addAttribute(
                 new Attribute(
                     "date",
@@ -369,7 +369,7 @@ public class NoteListImpl implements NoteList {
         }
 
         public int getValue() {
-            return new Integer(dEl.getAttribute("day").getValue()).intValue();
+            return Integer.parseInt(dEl.getAttribute("day").getValue());
         }
 
         /*public Note getNote() {
